narrow central column slightly to avoid excessive overflow

--- a/538classic.css
+++ b/538classic.css
@@ -1,7 +1,7 @@
 body {
     background-color: cornsilk;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
+    grid-template-columns: 1fr 3.25fr 1fr;
     grid-template-rows: 1fr;
 }
 
